--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-/nbproject/
-/dist/
-/build/
-build.xml
-manifest.mf
+#Archivos
+*.orig
+
+#Carpetas
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
